# NavCLIP

./: .gitignore  .gitmodules  README.md  dataloader.py  main.py  mymodelckpt.py  pyproject.toml  test.py  trainer.py
geoclip/model/: GeoCLIPLightning.py  location_encoder.py  misc.py
models/MapGlue/: README.md  demo.ipynb  environment.yaml  requirements.txt  visualize.py
models/SuperGlue/: match_pair.py
models/geoclip/: GeoCLIPLightning.py  image_encoder.py  location_encoder.py  loss.py  misc.py  satellite_img_processor.py  satellite_processor.py
navclip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dji_router_1.sh  download_dataset.sh  ntu_4.sh  test_UCLA.sh
