[project]
name = "navclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "kornia>=0.8.0",
    "lightning>=2.5.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.0",
]
